Added some support for XDG standard. zsh and offlineimap moved to .config

--- a/.config/spacemacs/.spacemacs.env
+++ b/.config/spacemacs/.spacemacs.env
@@ -48,13 +48,13 @@ LSCOLORS=Gxfxcxdxbxegedabagacad
 LS_COLORS=
 MAIL=/var/spool/mail/dominic
 MOTD_SHOWN=pam
-OLDPWD=/home/dominic
+OLDPWD=/home/dominic/.config/spacemacs
 P9K_SSH=0
 P9K_TTY=old
 PAGER=less
-PATH=/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/home/dominic/anaconda3/condabin:/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl
-PATH=/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/home/dominic/anaconda3/condabin:/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/usr/lib/jvm/default/bin
-PWD=/home/dominic
+PATH=/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/home/dominic/anaconda3/condabin:/usr/bin:/bin:/usr/local/sbin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/usr/lib/emacs/27.1/x86_64-pc-linux-gnu
+PATH=/home/dominic/bin:/usr/local/bin:/sbin:/usr/sbin:/home/dominic/anaconda3/condabin:/usr/bin:/bin:/usr/local/sbin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/usr/lib/emacs/27.1/x86_64-pc-linux-gnu:/usr/lib/jvm/default/bin
+PWD=/home/dominic/.config/spacemacs
 SHELL=/usr/bin/zsh
 SHLVL=1
 SPACEMACSDIR=/home/dominic/.config/spacemacs/
