--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,4 +1,4 @@
-# Colors (Gruvbox dark)
+# Colors (Gruvbox dark and light)
 schemes:
   gruvbox_dark: &dark # Default colors
     primary:
@@ -32,31 +32,31 @@ schemes:
   gruvbox_light: &light # Light themes
     primary:
       # hard contrast: background = '#f9f5d7'
-      background: '#fbf1c7'
+      background: "#fbf1c7"
       # soft contrast: background = '#f2e5bc'
-      foreground: '#3c3836'
+      foreground: "#3c3836"
 
     # Normal colors
     normal:
-      black:   '#fbf1c7'
-      red:     '#cc241d'
-      green:   '#98971a'
-      yellow:  '#d79921'
-      blue:    '#458588'
-      magenta: '#b16286'
-      cyan:    '#689d6a'
-      white:   '#7c6f64'
+      black: "#fbf1c7"
+      red: "#cc241d"
+      green: "#98971a"
+      yellow: "#d79921"
+      blue: "#458588"
+      magenta: "#b16286"
+      cyan: "#689d6a"
+      white: "#7c6f64"
 
     # Bright colors
     bright:
-      black:   '#928374'
-      red:     '#9d0006'
-      green:   '#79740e'
-      yellow:  '#b57614'
-      blue:    '#076678'
-      magenta: '#8f3f71'
-      cyan:    '#427b58'
-      white:   '#3c3836'
+      black: "#928374"
+      red: "#9d0006"
+      green: "#79740e"
+      yellow: "#b57614"
+      blue: "#076678"
+      magenta: "#8f3f71"
+      cyan: "#427b58"
+      white: "#3c3836"
 
 colors: *dark
 
@@ -118,4 +118,4 @@ key_bindings:
   - { key: Subtract, mods: Control, action: DecreaseFontSize }
   - { key: Minus, mods: Control, action: DecreaseFontSize }
   - { key: N, mods: Control, action: SpawnNewInstance }
-  - { key: D, mods: Alt|Shift, colors: &light }
+  #- { key: D, mods: Alt|Shift, colors: light }
