--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -49,7 +49,7 @@ shadow = true;
 shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -62,7 +62,7 @@ shadow-offset-y = -7;
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
-# no-dock-shadow = false
+no-dock-shadow = false
 
 # Don't draw shadows on drag-and-drop windows. This option is deprecated, 
 # you should use the *wintypes* option in your config file instead.
@@ -202,18 +202,9 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-  "80:class_g     = 'Bar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
-  "80:class_g     = 'Polybar'",
-  "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'",
-  "60:class_g     = 'panel'",
-  "80:class_g     = 'Emacs'"
+  "60:class_g     = 'panel'"
 ];
 
 
