--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -60,20 +60,20 @@ schemes:
 
 colors: *dark
 
-background_opacity: 0.8
+background_opacity: 0.75
 
 font:
   normal:
-    family: "Hack"
+    family: "JetBrainsMono Nerd Font"
     style: Regular
   bold:
-    family: "Hack"
+    family: "JetBrainsMono Nerd Font"
     style: Bold
   italic:
-    family: "Hack"
+    family: "JetBrainsMono Nerd Font"
     style: Italic
   bold_italic:
-    family: "Hack"
+    family: "JetBrainsMono Nerd Font"
     style: Bold Italic
 
   # Point size
