--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,66 +1,8 @@
-# Colors (Gruvbox dark and light)
-schemes:
-  gruvbox_dark: &dark # Default colors
-    primary:
-      # hard contrast: background = '#1d2021'
-      background: "#282828"
-      # soft contrast: background = '#32302f'
-      foreground: "#ebdbb2"
+# import theme file
+import:
+  - ~/.config/alacritty/themes.yml
 
-    # Normal colors
-    normal:
-      black: "#282828"
-      red: "#cc241d"
-      green: "#98971a"
-      yellow: "#d79921"
-      blue: "#458588"
-      magenta: "#b16286"
-      cyan: "#689d6a"
-      white: "#e9e9e9"
-
-    # Bright colors
-    bright:
-      black: "#928374"
-      red: "#fb4934"
-      green: "#b8bb26"
-      yellow: "#fabd2f"
-      blue: "#83a598"
-      magenta: "#d3869b"
-      cyan: "#8ec07c"
-      white: "#ebdbb9"
-
-  gruvbox_light: &light # Light themes
-    primary:
-      # hard contrast: background = '#f9f5d7'
-      background: "#fbf1c7"
-      # soft contrast: background = '#f2e5bc'
-      foreground: "#3c3836"
-
-    # Normal colors
-    normal:
-      black: "#fbf1c7"
-      red: "#cc241d"
-      green: "#98971a"
-      yellow: "#d79921"
-      blue: "#458588"
-      magenta: "#b16286"
-      cyan: "#689d6a"
-      white: "#7c6f64"
-
-    # Bright colors
-    bright:
-      black: "#928374"
-      red: "#9d0006"
-      green: "#79740e"
-      yellow: "#b57614"
-      blue: "#076678"
-      magenta: "#8f3f71"
-      cyan: "#427b58"
-      white: "#3c3836"
-
-colors: *dark
-
-background_opacity: 0.65
+background_opacity: 0.85
 
 font:
   normal:
@@ -115,4 +57,3 @@ key_bindings:
   - { key: Key0, mods: Control, action: ResetFontSize }
   - { key: Equals, mods: Control, action: IncreaseFontSize }
   - { key: Minus, mods: Control, action: DecreaseFontSize }
-  - { key: N, mods: Control, action: SpawnNewInstance }
