--- a/.config/mpd-notification.conf
+++ b/.config/mpd-notification.conf
@@ -1,6 +1,6 @@
 host = localhost
 port = 6600
-music-dir = ~/Media/Music/
+music-dir = /home/dominic/Media/Music/
 oneline = true
 scale = 200
 timeout = 1.5
