enabling mpd features that should have been enabled

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,19 +1,44 @@
+#Path Settings
 music_directory		"~/Media/Music"
 playlist_directory	"~/.config/mpd/playlists"
 db_file             "~/.config/mpd/database"
+state_file          "~/.config/mpd/state"
+pid_file            "~/.config/mpd/pid"
+sticker_file        "~/.config/mpd/sticker"
+log_file            "~/.config/mpd/log_file"
 metadata_to_use     "artist,album,title,track,name,genre,date,disc,albumartist"
+save_absolute_paths_in_playlists "no"
 
+#General Settings
+filesystem_charset "UTF-8"
+log_level "default"
 auto_update "yes"
-bind_to_address "127.0.0.1"
+auto_update_depth "4096"
 restore_paused "yes"
-max_output_buffer_size "16384"
+
+#Client Limits
+connection_timeout     "60"
+max_connections        "10"
+max_playlist_length    "16384"
+max_command_list_size  "2048"
+max_output_buffer_size "8192"
+
+#Network Settings
+bind_to_address "127.0.0.1"
+zeroconf_enabled "True"
 
 audio_output {
-	type "pulse"
-	name "pulse"
-	#type  "alsa"
-	#name  "ALSA"
+	# type  "alsa"
+	# name  "PCH - ALC269VC Analog"
+    # device "hw:0,0"
+    # auto_resample "no"
+    # auto_format "no"
+    # replay_gain_handler "none"
+    # mixer_type "none"
+    type "pulse"
+    name "pulse"
 }
+replaygain "off"
 
 audio_output {
        type	"fifo"
