--- a/.config/beets/config.yaml
+++ b/.config/beets/config.yaml
@@ -1,7 +1,10 @@
 directory: ~/Media/Music/
 library: ~/.local/share/musiclibrary.db
-plugins: fetchart embedart lyrics lastgenre inline acousticbrainz chroma scrub missing duplicates mpdupdate thumbnails mpdstats missing fuzzy ftintitle random
-strong_rec_thresh: 0.1
+plugins: fetchart embedart lyrics lastgenre inline acousticbrainz chroma scrub missing duplicates mpdupdate thumbnails mpdstats missing fuzzy ftintitle random convert
+strong_rec_thresh: 0.4
+
+import:
+  move: yes
 
 mpd:
   host: localhost
